--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -513,18 +513,18 @@ You may find a bug in R if:
 \end{enumerate}
 
 \textbf{Note}:
-When you are in doubt that there is a bug: (which should be most of the time!)
+When you are in doubt that there is a bug: (which should be the case most of the time!)
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Make sure whether the bug appears in a clean session of R. Many times, there are variables/commands/functions stored in history which might cause issues. Hence, check if the issue happens in a clean session. To do so, launch R from the command line with the \texttt{-\/-vanilla} option.
+  Make sure whether the bug appears in a clean session of R. Many times, there are variables/commands/functions stored in the workspace which might cause issues. Hence, check if the issue happens in a clean session. To do so, launch R from the command line with the \texttt{-\/-vanilla} option.
 \item
-  At times the code that is written is very complicated, has numerous package and file dependencies, has many function calls, etc.. In such scenarios it is quite common that the code throws an error and you are not able to solve it. You may tend to think that there is a bug that needs to be reported. Before doing so, try to produce a minimum working example of the code for the section where the error occurred. Add only those package and files which are required by that section, and see if the error appears still. Using this approach shall solve most of the errors.
+  At times the code that is written is very complicated, has numerous package and file dependencies, has many function calls, etc.. In such scenarios it is quite common that the code throws an error and you are not able to solve it. You may tend to think that there is a bug that needs to be reported. Before doing so, try to produce a minimum working example of the code for the section where the error occurred. Add only those packages and files which are required by that section, and see if the error still appears. Using this approach shall solve most of the errors.
 \item
   Install R-devel, which is the most recent version of R from \href{https://svn.r-project.org/R/trunk/}{svn} / \href{https://github.com/r-devel/r-svn}{git} or \href{https://cran.r-project.org/bin/windows/base/rdevel.html}{daily Windows build}, and see if your bug still exists in R-devel (it may have been fixed very recently).
 \item
-  \href{https://r.789695.n4.nabble.com/template/NamlServlet.jtp?macro=search_page\&node=909078\&query=isna\&days=0}{Search on R-devel email list for messages with keywords related to your possible bug}. If you find some related messages then read them to see if they clarify whether or not it is a bug. If you do not find any related messages, then please post a new message to R-devel. Your message should include (1) a brief description of the bug including current and expected behavior, (2) a minimal reproducible example.
+  \href{https://r.789695.n4.nabble.com/template/NamlServlet.jtp?macro=search_page\&node=909078\&query=isna\&days=0}{Search on the R-devel mailing list for messages with keywords related to your possible bug}. If you find some related messages then read them to see if they clarify whether or not it is a bug. If you do not find any related messages, then please post a new message to R-devel. Your message should include (1) a brief description of the bug including current and expected behavior, (2) a minimal reproducible example.
 \end{enumerate}
 
 \hypertarget{what-condition-might-not-be-a-bug}{%
@@ -537,9 +537,9 @@ When you are in doubt that there is a bug: (which should be most of the time!)
 \item
   Issues with \href{https://cran.r-project.org/doc/FAQ/R-FAQ.html\#Why-doesn_0027t-R-think-these-numbers-are-equal_003f}{\emph{seemingly} identical numbers} not being equal (especially floating point numbers) are usually not bugs.
 \item
-  If R is running slower than expected, then also it may not be a bug. Ask someone else to review your code in such a case.
+  If R is running slower than expected, then this also may not be a bug. Ask someone else to review your code in such a case.
 \item
-  If some function is working, but it is not defined in the best generalised way, then consult someone to look over your code. This may perhaps not be a bug; instead, it might be an alternative way of writing the function.
+  If some function is working, but it is not defined in the best generalised way, then consult someone to look over the code. This may perhaps not be a bug; instead, it might be an alternative way of writing the function.
 \end{enumerate}
 
 \hypertarget{checking-if-a-bug-is-already-reported}{%
@@ -550,13 +550,13 @@ The first step before filing a bug report is to see whether the problem has alre
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Save time for you and the developers
+  Save time for you and the developers.
 \item
-  Help you see if the bug is already fixed for the next release
+  Help you see if the bug is already fixed for the next release.
 \item
-  Lead you to learn what needs to be done to fix it
+  Lead you to learn what needs to be done to fix it.
 \item
-  Determine if any additional information is needed
+  Determine if any additional information is needed.
 \end{enumerate}
 
 The sections that follow discuss where to check whether a bug is already reported.
@@ -571,7 +571,7 @@ The sections that follow discuss where to check whether a bug is already reporte
 \item
   \href{}{Test} the bug.
 \item
-  \protect\hyperlink{FixBug}{Fix} the bug: Fixing a bug might require relatively more time. You may start a conversation about it on \href{https://bugs.r-project.org/bugzilla/index.cgi}{BugZilla}. This would require engagement with R Core team.
+  \protect\hyperlink{FixBug}{Fix} the bug: Fixing a bug might require relatively more time. You may start a conversation about it on \href{https://bugs.r-project.org/bugzilla/index.cgi}{BugZilla}. This would require engagement with the R Core Team.
 \end{enumerate}
 
 \hypertarget{what-are-some-places-where-you-may-find-a-bug}{%
@@ -600,17 +600,17 @@ Once you confirm a bug exists, you need to submit a bug report so that it gets f
 \item
   Packages that are supported by the R-Core are labelled with \texttt{Maintainer:\ R\ Core\ Team\ \textless{}R-core@r-project.org\textgreater{}}. One simple way to get the information from R is by running the \texttt{maintainer("package\_name")} command.
 \item
-  The bug report for R-Core supported packages, their documentations, and/ or a bug report for the R language itself can be submitted either to R-devel, \href{https://www.r-project.org/posting-guide.html\#which_list}{see posting guide}, or to \href{https://bugs.r-project.org/bugzilla/}{Bugzilla}. In the future, we hope to have an option to report an issue to the \href{https://github.com/r-devel/r-svn/issues}{GitHub Mirror of R svn server}.
+  The bug report for R-Core supported packages, their documentations, and/ or a bug report for the R language itself can be submitted either to R-devel, \href{https://www.r-project.org/posting-guide.html\#which_list}{see posting guide}, or to \href{https://bugs.r-project.org/bugzilla/}{Bugzilla}. In the future, we hope to have an option to report an issue to the \href{https://github.com/r-devel/r-svn/issues}{GitHub Mirror of the R svn server}.
 \item
   If you want to submit the bug report using \protect\hyperlink{Bugzilla}{Bugzilla}, please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to \texttt{bug-report-request@r-project.org} from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to R's Bugzilla members.
 \item
-  Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on \href{https://bugs.r-project.org/bugzilla/query.cgi}{search existing bug reports}, may use the \href{https://bugs.r-project.org/bugzilla/query.cgi?format=advanced}{advanced search} option here, or \href{https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr\&bug_status=NEW\&bug_status=ASSIGNED\&bug_status=CONFIRMED\&bug_status=REOPENED\&bug_status=UNCONFIRMED\&bugidtype=include\&chfieldto=Now\&cmdtype=doit\&emailassigned_to1=1\&emailassigned_to2=1\&emailcc2=1\&emailreporter2=1\&emailtype1=substring\&emailtype2=substring\&field0-0-0=noop\&long_desc_type=substring\&order=bugs.delta_ts\%20desc\&query_format=advanced\&short_desc_type=allwordssubstr\&type0-0-0=noop}{show open bugs new-to-old}).
+  Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on \href{https://bugs.r-project.org/bugzilla/query.cgi}{search existing bug reports}, using the \href{https://bugs.r-project.org/bugzilla/query.cgi?format=advanced}{advanced search} option here, or \href{https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr\&bug_status=NEW\&bug_status=ASSIGNED\&bug_status=CONFIRMED\&bug_status=REOPENED\&bug_status=UNCONFIRMED\&bugidtype=include\&chfieldto=Now\&cmdtype=doit\&emailassigned_to1=1\&emailassigned_to2=1\&emailcc2=1\&emailreporter2=1\&emailtype1=substring\&emailtype2=substring\&field0-0-0=noop\&long_desc_type=substring\&order=bugs.delta_ts\%20desc\&query_format=advanced\&short_desc_type=allwordssubstr\&type0-0-0=noop}{show open bugs new-to-old}).
 \end{enumerate}
 
 \hypertarget{nonRCorePkgBug}{%
 \subsection{Bug in the non R-Core supported packages and/or their documentations}\label{nonRCorePkgBug}}
 
-For packages that are not maintained by the R-Core, the bug reports can be submiited at, perhaps, an issues tracker url on GitHub/GitLab/R-Forge. To find if such an issues tracker is available, you can look at the package \texttt{DESCRIPTION} file first (e.g.~using \texttt{packageDescription("package\_name")}) to check if a url is provided in the \texttt{BugReports} field. If that is not available, then the package maintainer can be contacted (using \texttt{maintainer("package\_name")}). In R running the function \texttt{bug.report(package\ =\ "package\_name")} shall direct you to either the GitHub issue tracker of the package, or to the bug tracking web page, or towards composing an e-mail to the package maintainer. This function \texttt{bug.report} is disabled in RStudio, by default. However, if you use \texttt{utils::bug.report(package\ =\ "package\_name")} then it works on RStudio as well. Please ensure that the bug is not already reported or fixed before reporting it in any of the ways suggested above.
+For packages that are not maintained by the R-Core, the bug reports can be submitted at, perhaps, an issues tracker url on GitHub/GitLab/R-Forge. To find if such an issues tracker is available, you can look at the package \texttt{DESCRIPTION} file first (e.g.~using \texttt{packageDescription("package\_name")}) to check if a url is provided in the \texttt{BugReports} field. If that is not available, then the package maintainer can be contacted (using \texttt{maintainer("package\_name")}). In R running the function \texttt{bug.report(package\ =\ "package\_name")} shall direct you to either the GitHub issue tracker of the package, or to the bug tracking web page, or towards composing an e-mail to the package maintainer. This function \texttt{bug.report} is disabled in RStudio, by default. However, if you use \texttt{utils::bug.report(package\ =\ "package\_name")} then it works on RStudio as well. Please ensure that the bug is not already reported or fixed before reporting it in any of the ways suggested above.
 
 \hypertarget{good-practices-in-reporting-bugs-expectations-of-a-good-bug-report}{%
 \section{Good practices in reporting bugs / Expectations of a good bug report}\label{good-practices-in-reporting-bugs-expectations-of-a-good-bug-report}}
@@ -620,25 +620,25 @@ If you follow the practices given below, you will come up with a good bug report
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Include a minimal reproducible example of the bug in your report. The maintainer should be able to quickly reproduce the bug on using the minimal example that you provide. Here is a \href{https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example}{community wiki post} on how to make a minimal reproducible example.
+  Include a minimal reproducible example of the bug in your report. The maintainer should be able to quickly reproduce the bug using the minimal example that you provide. Here is a \href{https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example}{community wiki post} on how to make a minimal reproducible example.
 \item
   Mention the software architecture on which the bug occurred.
 \item
   Use inbuilt data sets as far as possible.
 \end{enumerate}
 
-In addition to the above, here are the \href{https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html}{bug writing guidelines} on Bugzilla. The \href{https://www.r-project.org/bugs.html\#writing-a-good-bug-report}{bug reporting} documentation in R also the discusses practices to write a good bug report.
+In addition to the above, here are the \href{https://bugs.r-project.org/bugzilla/page.cgi?id=bug-writing.html}{bug writing guidelines} on Bugzilla. The \href{https://www.r-project.org/bugs.html\#writing-a-good-bug-report}{bug reporting} documentation in R also discusses practices to write a good bug report.
 
 Once you have successfully reported a bug, you will likely receive an update each time an action is taken on the bug. On Bugzilla, the report may be given one of the following status: New, Assigned, Confirmed, Reopened, Unconfirmed.
 
 \hypertarget{disagreement-with-a-resolution-on-the-bug-tracker}{%
 \section{Disagreement with a resolution on the bug tracker}\label{disagreement-with-a-resolution-on-the-bug-tracker}}
 
-As humans, there might be differences of opinions from time to time. What needs to be considered here is that, being respectful of the fact that care, thought, and volunteer time has gone into the resolution of the issue or bug.
+As humans, there might be differences of opinions from time to time. What needs to be considered here is to be respectful of the fact that care, thought, and volunteer time has gone into the resolution of the issue or bug.
 
-If you take some time, then on reflection, the resolution steps may seem more reasonable than you initially thought. If you still feel that the resolution is incorrect, then raise a thoughtful question to the person who resolved it. If the issue was carefully thought about in the first place then is less likely to win any conversion of thought.
+If you take some time, then on reflection, the resolution steps may seem more reasonable than you initially thought. If you still feel that the resolution is incorrect, then raise a thoughtful question to the person who resolved it. If the issue was not carefully thought about in the first place then it is less likely to win any conversion of thought.
 
-As a reminder, issues closed by a core developer on Bugzilla have already been carefully considered. Please do not reopen a closed issue. Although one can comment on a closed issue, if necessary. Every comment on an issue generates an email to every R-core member (unless they have the notifications disabled). So it would be best to be considerate while commenting on issues, especially in case of the closed issues or when you are commenting in pure agreement without adding anything beyond that to a discussion (the +1 type posts which are perfectly acceptable in other contexts).
+As a reminder, issues closed by a core developer on Bugzilla have already been carefully considered. Please do not reopen a closed issue. Although one can comment on a closed issue, if necessary. Every comment on an issue generates an email to every R-core member (unless they have the notifications disabled). So it would be best to be considerate while commenting on issues, especially in case of closed issues or when you are commenting in pure agreement without adding anything beyond that to a discussion (the +1 type posts which are perfectly acceptable in other contexts).
 
 \hypertarget{examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list}{%
 \section{Examples of Bug reports submitted on Bugzilla or R-devel mailing list}\label{examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list}}
