SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -126,6 +126,16 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
+\hypertarget{section}{%
+\chapter*{}\label{section}}
+\addcontentsline{toc}{chapter}{}
+
+\begin{figure}
+\centering
+\includegraphics[width=5.20833in,height=4.16667in]{img/Rlogo.png}
+\caption{R Logo}
+\end{figure}
+
 \hypertarget{acknowledgement}{%
 \chapter*{Acknowledgement}\label{acknowledgement}}
 \addcontentsline{toc}{chapter}{Acknowledgement}
