--- a/06-lifecycle_of_a_Patch.Rmd
+++ b/06-lifecycle_of_a_Patch.Rmd
@@ -22,6 +22,60 @@ To submit a patch, you need:
 
 Refer to the guidelines given [here](https://www.r-project.org/bugs.html#how-to-submit-patches) for the process to prepare a patch against R-devel.
 
+In summary you should modify the source code on your computer of the latest version of R (`r-devel`). 
+
+Then you should check that R still works as expected via:
+
+    ```sh
+    make check-devel
+    ```
+
+If there is no test for your proposed change you can add a new test.
+
+Then you should bring changes from the repository into the working copy, in case any other change has been introduced, and create a path.diff file with just the changes you want to propose to the R core:
+
+    ```sh
+    svn update
+    svn diff > patch.diff
+    ```
+
+
+In addition to check in your computer you can use the [r-devel/r-svn](https://github.com/r-devel/r-svn  "A github svn mirror") to check this patch with different configurations and OS.
+
+You should first find the file to edit, via the github interface for example:
+
+![Screenshot of the heading of the src/library/stats/man/Mulinom.Rd](img/rsvn_file_to_edit.png) 
+
+Then you can edit it, directly in the interface or using the github interface:
+
+![Screenshot of the file src/library/stats/man/Mulinom.Rd being edited via the Github interface](img/rsvn_edit_file.png)
+
+Create a commit with a message describing the changes
+
+![Screenshot of the commit message](img/rsvn_commit_message.png)
+
+And create a pull request from the branch created to check the changes.
+
+![Screenshot of the message when opening a pull requests from the branch](img/rsvn_commit_pre_PR.png)
+
+Add a message and description of the svn 
+
+![Screenshot of the message and content while opening a pull requests for the r-svn repository](img/rsvn_PR_message.png)
+
+![Screenshot of the pull requests opened](img/rsvn_PR_created.png) 
+
+Once the PR is submitted, some automatic checks will be triggered (they might need to be approved by some other users as per Github rules):
+
+![Screenshot of the checks triggered by opening the pull request](img/rsvn_PR_automatic_checks.png)
+When the checks end you will need to explore the results and asses if the results indicate a problem or not. 
+
+![Screenshot of the results of the Github checks in the r-svn mirror](img/rsvn_checks_results.png)
+
+Once you are happy with the changes and the checks report that everything is okay you can retrieve the patch via:
+
+`https://patch-diff.githubusercontent.com/raw/r-devel/r-svn/pull/<pull_request_number>.diff`
+
+
 ## Making good patches {#GoodPatches} 
 
 When creating a patch for submission, there are several things that you can do to help ensure that your patch is accepted:
