--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: r-devel/rdevguide
-url: 'TDDO'
+url: https://contributor.r-project.org/rdevguide
 cover-image: "img/Rlogo.png"
 favicon: "img/Rlogo.svg"
 description: "A guide to R development."
