SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -207,8 +207,7 @@ The guide is intended as a comprehensive resource for contributing to base R. Th
 \end{enumerate}
 
 \hypertarget{how-to-contribute-to-this-guide}{%
-\section*{How to contribute to this guide itself?}\label{how-to-contribute-to-this-guide}}
-\addcontentsline{toc}{section}{How to contribute to this guide itself?}
+\section{How to contribute to this guide itself?}\label{how-to-contribute-to-this-guide}}
 
 This guide is built using bookdown which makes editing it easier, provided you have a GitHub account (sign-up at \href{https://github.com/}{github.com}). After you log-in to GitHub, click on the `Edit' icon highlighted with a red ellipse in the image below. This will take you to an editable version of the the source R Markdown file that generated the page you are on:
 
