--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -690,7 +690,7 @@ After understanding where bugs are reported in R (Bugzilla) or in other projects
 Around the clock, new bug reports are being submitted on Bugzilla or the bug trackers (for instance, GitHub issues) of R packages and existing bug reports are being updated. Every bug report needs to be reviewed to make sure various things are in proper order. You can help with this process of reviewing bugs.
 
 \hypertarget{Bugzilla}{%
-\subsection{Navigating Bugzilla}\label{Bugzilla}}
+\section{Navigating Bugzilla}\label{Bugzilla}}
 
 Base R uses \href{https://bugs.r-project.org/}{Bugzilla} for issue tracking. In order to report bugs, as well as fixes, you will first need to create an \protect\hyperlink{RCorePkgBug}{account} on Bugzilla. After having successfully logged in to Bugzilla, you are good to go.
 
