SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2022-11-28}
+\date{2022-11-29}
 
 \begin{document}
 \maketitle
@@ -140,7 +140,7 @@
 \chapter*{Acknowledgement}\label{acknowledgement}}
 \addcontentsline{toc}{chapter}{Acknowledgement}
 
-This guide draws on documentation and articles written by the R Core Team. The first version of the guide was heavily influence by the \href{https://devguide.python.org/}{Python Developer's Guide}.
+This guide draws on documentation and articles written by the R Core Team. The first version of the guide was heavily influenced by the \href{https://devguide.python.org/}{Python Developer's Guide}.
 
 Initial chapters of the guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. This initial version was upgraded in a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal}{Google Season of Docs 2022} project with Saranjeet Kaur Bhogal and Lluís Revilla Sancho working as technical writers managed by Nicolas Bennett and overseen by a \href{https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal\#steering-committee}{Steering Committee} including representatives from R Core and the wider R community.
 
