--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1089,14 +1089,14 @@ This chapter describes the styleguide for R's documentation, how to document for
 
 R's documentation has long been considered to be good for a free programming language. The core developers have been committed to providing good documentation on the language and its packages. The continuing involvement of the user community in providing assistance for creating and maintaining documentation has also supported a lot.
 
-The involvement of the community takes many forms, from authoring to bug reports to raising an issue when the documentation could be more complete or easier to use.
+The involvement of the community takes many forms, from authoring to making bug reports or raising an issue when the documentation could be more complete or easier to use.
 
-This chapter is aimed at authors and potential authors of documentation for R. More specifically, it is for people contributing to the standard documentation and developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify existing documentation or provide documentation that is missing, your contribution will be welcome and highly appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out.
+This chapter is aimed at authors and potential authors of R documentation provided by the help files. More specifically, it is for people contributing to the standard documentation and for those developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify and improve existing documentation or provide documentation that is missing, your contribution is welcome and appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the patch contribution might be incorrect, other times, while a change in wording may make some things clearer and easier to understand, other finer details of some corner case may become less clear, leading to the patch being declined or modified by the member of R Core reviewing it before applying it (if they agree the issue is important enough to fix).
 
-\hypertarget{guidelines-for-writing-the-system-help-files-in-.rd-format}{%
-\section{Guidelines for writing the system help files (in .Rd format)}\label{guidelines-for-writing-the-system-help-files-in-.rd-format}}
+\hypertarget{guidelines-for-writing-r-help-files}{%
+\section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
 
-Following are the suggested guidelines while creating the system help files in the .Rd format. These are intended for writing the core documentations but may also be useful for package writers. (share documentation of a simple base function here?)
+Following are the suggested guidelines while creating the system help files in the .Rd format. A example of the .Rd format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}{mean.Rd}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
 
 There are three main parts of an .Rd file:
 
@@ -1157,7 +1157,7 @@ All the above information is included in a .Rd file within a series of sections 
     Examples should also not take longer than necessary to run, as they are run when checking a build of R.
   \end{itemize}
 \item
-  \texttt{\textbackslash{}synopsis} section: The \texttt{\textbackslash{}usage} section can have the function definition, or the actual definition can be included in the \texttt{\textbackslash{}synopsis} section.
+  \texttt{\textbackslash{}synopsis} section: The \texttt{\textbackslash{}usage} section can have the function definition, or the actual definition can be included in the \texttt{\textbackslash{}synopsis} section. The full documentation for \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Documenting-functions}{\texttt{\textbackslash{}usage}} says that the usage information specified should match the function definition exactly. Apparently, \texttt{\textbackslash{}synopsis} was removed in \href{https://github.com/r-devel/r-svn/blob/0d65935f30dcaccfeee1dd61991bf4b1444873bc/src/library/tools/R/RdConv2.R\#L918-L919}{R 3.1.0}, but it is still mentioned in \href{https://developer.r-project.org/Rds.html}{Rds}.
 \item
   \texttt{\textbackslash{}source} and \texttt{\textbackslash{}references} sections:
 
@@ -1211,9 +1211,11 @@ Maintaining the accuracy of R's documentations and keeping a high level of quali
 
 Looking at pre-existing documentation source files can be very helpful when getting started.
 
-If you look at documentation issues on Bugzilla, you will find various documentation problems that may need work. Issues vary from typos to unclear documentation and items lacking documentation.
+If you look at documentation issues on Bugzilla, you will find various documentation problems that may need work. Since ``Documentation'' is one of the possible components you can set in the metadata, you can browse by this \href{https://bugs.r-project.org/bugzilla/buglist.cgi?component=Documentation}{component} to find the documentation bugs on Bugzilla. Issues vary from typos to unclear documentation and items lacking documentation.
 
 If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).
+
+If you find some typo or problem on \href{https://cran.r-project.org}{CRAN} after checking the problem or typo you can write a polite email to \texttt{cran-sysadmin@r-project.org} and one of the R-core members working with CRAN. You'll probably get a prompt reply about how the issue is going to be fixed.
 
 \hypertarget{proofreading}{%
 \section{Proofreading}\label{proofreading}}
